--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,56 @@
-/web/bundles/
 /app/bootstrap.php.cache
-/app/cache/*
 /app/config/parameters.yml
+/app/phpunit.xml
+/app/cache/*
 /app/logs/*
 !app/cache/.gitkeep
 !app/logs/.gitkeep
-/app/phpunit.xml
+/var/bootstrap.php.cache
+/var/cache/*
+/var/logs/*
+/var/sessions/*
+!var/cache/.gitkeep
+!var/logs/.gitkeep
+!/var/sessions/.gitkeep
 /build/
 /vendor/
-/bin/
+/bin/*
+!bin/console
+!bin/symfony_requirements
 /composer.phar
+/web/bundles/
+/web/config.php
+/phpunit.xml
+/node_modules
+
+*php~*
+
+
+Thumbs.db
+ehthumbs.db
+
+$RECYCLE.BIN/
+
+*.cab
+*.msi
+*.msm
+*.msp
+*.log
+
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+
+.Spotlight-V100
+.Trashes
+
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+.idea/*
+.fuse*
