--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -36,6 +36,8 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    form_themes:
+        - 'VichUploaderBundle:Form:fields.html.twig'
 
 # Doctrine Configuration
 doctrine:
@@ -94,3 +96,14 @@ assetic:
         cssrewrite: ~
     bundles: [ "FOSCommentBundle" ]
     bundles: [ IdeatoStarRatingBundle ]
+
+#vich_uploader
+vich_uploader:
+    db_driver: orm
+    mappings:
+        product_image:
+            uri_prefix:         /pictures
+            upload_destination: %kernel.root_dir%/../web/pictures
+            inject_on_load:     false
+            delete_on_update:   true
+            delete_on_remove:   true
