--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "friendsofsymfony/message": "1.0.x-dev",
         "friendsofsymfony/message-bundle": "^1.2",
         "blackknight467/star-rating-bundle": "^1.0",
-        "ideato/star-rating-bundle": "dev-master"
+        "ideato/star-rating-bundle": "dev-master",
+        "vich/uploader-bundle": "^1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
