--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -74,6 +74,9 @@ fos_user:
     db_driver: orm
     firewall_name: main
     user_class: FilRougeBundle\Entity\User
+    registration:
+        form:
+            type: FilRougeBundle\Form\RegistrationType
 
 #FOS Comment
 fos_comment:
