--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 /app/phpunit.xml
 /app/cache/*
 /app/logs/*
+/app/logs/dev.log
+!/app/logs/.gitkeep
 !app/cache/.gitkeep
 !app/logs/.gitkeep
 /var/bootstrap.php.cache
