--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -107,6 +107,7 @@ vich_uploader:
         product_image:
             uri_prefix:         /pictures
             upload_destination: %kernel.root_dir%/../web/pictures
+            namer:              vich_uploader.namer_uniqid
             inject_on_load:     false
             delete_on_update:   true
             delete_on_remove:   true
