--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "friendsofsymfony/message-bundle": "^1.2",
         "blackknight467/star-rating-bundle": "^1.0",
         "ideato/star-rating-bundle": "dev-master",
-        "vich/uploader-bundle": "^1.0"
+        "vich/uploader-bundle": "^1.0",
+        "liip/search-bundle": "^1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
