--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "friendsofsymfony/message-bundle": "^1.2",
         "vich/uploader-bundle": "^1.0",
         "phpunit/phpunit": "^5.3",
-        "knplabs/knp-paginator-bundle": "^2.5"
+        "knplabs/knp-paginator-bundle": "^2.5",
+        "ideato/star-rating-bundle": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
